# docs/swagger.yaml
@@ -411,6 +411,8 @@ definitions:
         type: string
       net_salary:
         type: number
+      status:
+        type: string
       unit_currency:
         type: string
       updated_at:
@@ -1756,6 +1758,22 @@ paths:
       summary: Delete Employee Information
       tags:
       - Employee
+    patch:
+      description: Deletes the employee's information
+      parameters:
+      - description: Employee ID
+        in: query
+        name: _id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - CookieAuth: []
+      summary: Delete Employee Information
+      tags:
+      - Employee
   /api/v1/employees/get/_id:
     get:
       description: Retrieves the employee's information
@@ -1778,6 +1796,23 @@ paths:
       consumes:
       - application/json
       description: Retrieves the employee's information
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - CookieAuth: []
+      summary: Get Employee Information
+      tags:
+      - Employee
+  /api/v1/employees/get/email:
+    get:
+      description: Retrieves the employee's information
+      parameters:
+      - description: Employee Email
+        in: query
+        name: email
+        required: true
+        type: string
       produces:
       - application/json
       responses: {}
@@ -1824,6 +1859,29 @@ paths:
       security:
       - CookieAuth: []
       summary: Create Employee Information
+      tags:
+      - Employee
+  /api/v1/employees/update/status:
+    put:
+      description: Create the employee's information
+      parameters:
+      - description: Employee ID
+        in: query
+        name: _id
+        required: true
+        type: string
+      - description: Employee data
+        in: body
+        name: status
+        required: true
+        schema:
+          $ref: '#/definitions/employees_domain.Input'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - CookieAuth: []
+      summary: Update Employee Information
       tags:
       - Employee
   /api/v1/inventory/{_id}:
