# internal/api/routers/human_resources_management/salary/salary.route.go
@@ -5,8 +5,10 @@ import (
 	"go.mongodb.org/mongo-driver/mongo"
 	salarycontroller "shop_erp_mono/internal/api/controllers/human_resources_management/salary"
 	"shop_erp_mono/internal/config"
+	employees_domain "shop_erp_mono/internal/domain/human_resource_management/employees"
 	roledomain "shop_erp_mono/internal/domain/human_resource_management/role"
 	salarydomain "shop_erp_mono/internal/domain/human_resource_management/salary"
+	employeerepository "shop_erp_mono/internal/repository/human_resource_management/employee/repository"
 	rolerepository "shop_erp_mono/internal/repository/human_resource_management/role/repository"
 	salaryrepository "shop_erp_mono/internal/repository/human_resource_management/salary/repository"
 	salaryusecase "shop_erp_mono/internal/usecase/human_resource_management/salary/usecase"
@@ -16,8 +18,9 @@ import (
 func SalaryRouter(env *config.Database, timeout time.Duration, db *mongo.Database, group *gin.RouterGroup, cacheTTL time.Duration) {
 	sa := salaryrepository.NewSalaryRepository(db, salarydomain.CollectionSalary)
 	ro := rolerepository.NewRoleRepository(db, roledomain.CollectionRole)
+	em := employeerepository.NewEmployeeRepository(db, employees_domain.CollectionEmployee)
 	salary := &salarycontroller.SalaryController{
-		SalaryUseCase: salaryusecase.NewSalaryUseCase(timeout, sa, ro, cacheTTL),
+		SalaryUseCase: salaryusecase.NewSalaryUseCase(timeout, sa, ro, em, cacheTTL),
 		Database:      env,
 	}
 
