# internal/domain/human_resource_management/employees/employees.contracts.go
@@ -8,10 +8,13 @@ import (
 type IEmployeeRepository interface {
 	CreateOne(ctx context.Context, employee *Employee) error
 	DeleteOne(ctx context.Context, id primitive.ObjectID) error
+	DeleteSoft(ctx context.Context, id primitive.ObjectID) error
 	UpdateOne(ctx context.Context, id primitive.ObjectID, employee *Employee) error
-	UpdateStatus(ctx context.Context, id primitive.ObjectID, isActive bool) error
+	UpdateStatus(ctx context.Context, id primitive.ObjectID, active string) error
 	GetByID(ctx context.Context, id primitive.ObjectID) (Employee, error)
+	GetByName(ctx context.Context, name string) (Employee, error)
 	GetByEmail(ctx context.Context, email string) (Employee, error)
+	GetByStatus(ctx context.Context, status string) ([]Employee, error)
 	GetAll(ctx context.Context) ([]Employee, error)
 	CountEmployeeByEmail(ctx context.Context, email string) (int64, error)
 	CountEmployee(ctx context.Context) (int64, error)
@@ -22,10 +25,14 @@ type IEmployeeRepository interface {
 type IEmployeeUseCase interface {
 	CreateOne(ctx context.Context, employee *Input) error
 	DeleteOne(ctx context.Context, id string) error
+	DeleteSoft(ctx context.Context, id string) error
 	UpdateOne(ctx context.Context, id string, employee *Input) error
-	UpdateStatus(ctx context.Context, id string, isActive bool) error
+	UpdateStatus(ctx context.Context, id string, active string) error
 	GetByID(ctx context.Context, id string) (Output, error)
+	GetByName(ctx context.Context, name string) (Output, error)
 	GetByEmail(ctx context.Context, email string) (Output, error)
+	GetByStatus(ctx context.Context, status string) ([]Output, error)
 	GetAll(ctx context.Context) ([]Output, error)
 	CountEmployee(ctx context.Context) (int64, error)
+	LifeCycle(ctx context.Context) error
 }
