# internal/domain/human_resource_management/employees/employees.model.go
@@ -9,9 +9,10 @@ const (
 	CollectionEmployee = "employee"
 )
 
-// Employee struct represents an employee in the HR system.
 type Employee struct {
 	ID           primitive.ObjectID `bson:"_id,omitempty" json:"id"`
+	DepartmentID primitive.ObjectID `bson:"department_id" json:"department_id"`
+	RoleID       primitive.ObjectID `bson:"role_id" json:"role_id"`
 	FirstName    string             `bson:"first_name" json:"first_name"`
 	LastName     string             `bson:"last_name" json:"last_name"`
 	Gender       string             `bson:"gender" json:"gender"`
@@ -21,11 +22,9 @@ type Employee struct {
 	AvatarURL    string             `bson:"avatar_url" json:"avatar_url"`
 	DateOfBirth  time.Time          `bson:"date_of_birth" json:"date_of_birth"`
 	DayOfWork    time.Time          `bson:"date_of_work" json:"day_of_work"`
-	DepartmentID primitive.ObjectID `bson:"department_id" json:"department_id"`
-	RoleID       primitive.ObjectID `bson:"role_id" json:"role_id"`
 	StartDate    time.Time          `bson:"start_date" json:"start_date"`
 	EndDate      time.Time          `bson:"end_date" json:"end_date"`
-	IsActive     bool               `bson:"is_active" json:"is_active"`
+	Active       string             `bson:"active" json:"active"`
 	CreatedAt    time.Time          `bson:"created_at" json:"created_at"`
 	UpdatedAt    time.Time          `bson:"updated_at" json:"updated_at"`
 }
